--- a/packages/modules/data-widgets/package.json
+++ b/packages/modules/data-widgets/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mendix/data-widgets",
     "moduleName": "Data Widgets",
-    "version": "2.28.2",
+    "version": "2.27.2",
     "license": "Apache-2.0",
     "copyright": "© Mendix Technology BV 2023. All rights reserved.",
     "private": true,
@@ -27,13 +27,13 @@
     },
     "moduleFolderNameInModeler": "datawidgets",
     "marketplace": {
-        "minimumMXVersion": "10.12.6.46815",
+        "minimumMXVersion": "9.24.0.2965",
         "appNumber": 116540,
         "appName": "Data Widgets"
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/DataWidgets-module",
-        "branchName": "main"
+        "branchName": "data-widgets-backport-9-24"
     },
     "scripts": {
         "verify": "rui-verify-package-format",
