--- a/packages/pluggableWidgets/datagrid-web/package.json
+++ b/packages/pluggableWidgets/datagrid-web/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mendix/datagrid-web",
     "widgetName": "Datagrid",
-    "version": "2.28.2",
+    "version": "2.27.2",
     "description": "",
     "copyright": "© Mendix Technology BV 2023. All rights reserved.",
     "private": true,
@@ -17,12 +17,12 @@
         "mpkName": "com.mendix.widget.web.Datagrid.mpk"
     },
     "marketplace": {
-        "minimumMXVersion": "10.12.0",
+        "minimumMXVersion": "9.24.0.2965",
         "appName": "Data Grid 2"
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
-        "branchName": "datagrid-web-referenceSet"
+        "branchName": "datagrid-web-next"
     },
     "packagePath": "com.mendix.widget.web",
     "scripts": {
