--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
         "patchedDependencies": {
             "react-big-calendar@0.19.2": "patches/react-big-calendar@0.19.2.patch",
             "mobx@6.12.3": "patches/mobx@6.12.3.patch",
-            "mobx-react-lite@4.0.7": "patches/mobx-react-lite@4.0.7.patch"
+            "mobx-react-lite@4.0.7": "patches/mobx-react-lite@4.0.7.patch",
+            "mime-types": "patches/mime-types.patch"
         }
     }
 }
