--- a/packages/pluggableWidgets/file-uploader-web/package.json
+++ b/packages/pluggableWidgets/file-uploader-web/package.json
@@ -3,7 +3,7 @@
     "widgetName": "FileUploader",
     "version": "1.0.0",
     "description": "",
-    "copyright": "© Mendix Technology BV 2023. All rights reserved.",
+    "copyright": "© Mendix Technology BV 2024. All rights reserved.",
     "private": true,
     "repository": {
         "type": "git",
@@ -20,7 +20,7 @@
     },
     "marketplace": {
         "minimumMXVersion": "9.24.0.2965",
-        "appName": "Data Grid 2"
+        "appName": "File Uploader"
     },
     "engines": {
         "node": ">=16"
@@ -35,6 +35,8 @@
         "format": "prettier --write .",
         "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
         "test": "pluggable-widgets-tools test:unit:web",
+        "e2e": "echo \"Skipping this e2e test\"",
+        "e2edev": "run-e2e dev --with-preps",
         "release": "pluggable-widgets-tools release:web",
         "verify": "rui-verify-package-format",
         "update-changelog": "rui-update-changelog-widget",
