--- a/.github/workflows/BuildJobs.yml
+++ b/.github/workflows/BuildJobs.yml
@@ -215,7 +215,7 @@ jobs:
                   --event-name ${{ github.event_name }}
             - name: Check file existence
               id: check_files
-              uses: andstor/file-existence-action@v3
+              uses: andstor/file-existence-action@076e0072799f4942c8bc574a82233e1e4d13e9d6 # v3.0.0
               with:
                   files: "./automation/run-e2e/ctrf/*"
             - name: "Generating Github Test Summary"
