--- a/.github/workflows/BuildJobs.yml
+++ b/.github/workflows/BuildJobs.yml
@@ -217,7 +217,8 @@ jobs:
               id: check_files
               uses: andstor/file-existence-action@076e0072799f4942c8bc574a82233e1e4d13e9d6 # v3.0.0
               with:
-                  files: "./automation/run-e2e/ctrf/*"
+                  files: "./automation/run-e2e/ctrf/*.json"
+              if: always()
             - name: "Generating Github Test Summary"
               if: steps.check_files.outputs.files_exists == 'true'
               run: |
