--- a/packages/pluggableWidgets/any-chart-web/package.json
+++ b/packages/pluggableWidgets/any-chart-web/package.json
@@ -29,7 +29,7 @@
     },
     "packagePath": "com.mendix.widget.web",
     "scripts": {
-        "start": "pluggable-widgets-tools start:server",
+        "start": "cross-env NODE_OPTIONS=--max-old-space-size=8192 pluggable-widgets-tools start:server",
         "dev": "pluggable-widgets-tools start:web",
         "build": "pluggable-widgets-tools build:web",
         "format": "pluggable-widgets-tools format",
@@ -47,10 +47,12 @@
         "@mendix/pluggable-widgets-tools": "10.16.0",
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/run-e2e": "workspace:^*",
-        "@types/plotly.js": "^2.12.0"
+        "@types/plotly.js": "^2.12.0",
+        "@types/plotly.js-dist-min": "^2.3.4",
+        "cross-env": "^7.0.3"
     },
     "dependencies": {
         "classnames": "^2.3.2",
-        "plotly.js-dist": "^2.35.2"
+        "plotly.js-dist-min": "^2.35.3"
     }
 }
