--- a/packages/customWidgets/signature-web/package.json
+++ b/packages/customWidgets/signature-web/package.json
@@ -29,7 +29,11 @@
         "release": "ts-node --project scripts/tsconfig.json scripts/build.ts production",
         "format": "prettier --write .",
         "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
-        "test": "pluggable-widgets-tools test:unit:web"
+        "test": "pluggable-widgets-tools test:unit:web",
+        "create-gh-release": "rui-create-gh-release",
+        "publish-marketplace": "rui-publish-marketplace",
+        "update-changelog": "rui-update-changelog-widget",
+        "verify": "rui-verify-package-format"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
