feat(custom-charts-web): add onclick, layout sizing, preview styling

--- a/packages/pluggableWidgets/custom-chart-web/package.json
+++ b/packages/pluggableWidgets/custom-chart-web/package.json
@@ -21,7 +21,7 @@
     "marketplace": {
         "minimumMXVersion": "10.16.0",
         "appNumber": 1234,
-        "appName": "CustomChart"
+        "appName": "Custom chart"
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
