--- a/packages/shared/charts/package.json
+++ b/packages/shared/charts/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mendix/shared-charts",
-    "version": "2.0.1",
+    "version": "2.0.2",
     "description": "Shared components for charts",
     "private": true,
     "copyright": "© Mendix Technology BV 2023. All rights reserved.",
@@ -45,18 +45,18 @@
         "@types/plotly.js": "^2.12.30",
         "@types/react-plotly.js": "^2.5.0",
         "copy-and-watch": "^0.1.6",
-        "rimraf": "^2.7.1"
-    },
-    "dependencies": {
+        "rimraf": "^2.7.1",
         "@rollup/plugin-commonjs": "^25.0.8",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^2.4.2",
         "@rollup/plugin-terser": "^0.4.4",
+        "rollup": "^2.79.2",
+        "rollup-plugin-copy": "^3.5.0"
+    },
+    "dependencies": {
         "classnames": "^2.3.2",
         "deepmerge": "^4.3.1",
         "plotly.js": "^2.35.2",
-        "react-plotly.js": "^2.6.0",
-        "rollup": "^2.79.2",
-        "rollup-plugin-copy": "^3.5.0"
+        "react-plotly.js": "^2.6.0"
     }
 }
