--- a/packages/pluggableWidgets/custom-chart-web/package.json
+++ b/packages/pluggableWidgets/custom-chart-web/package.json
@@ -51,6 +51,7 @@
         "cross-env": "^7.0.3"
     },
     "dependencies": {
+        "@mendix/widget-plugin-mobx-kit": "workspace:*",
         "classnames": "^2.3.2",
         "plotly.js-dist-min": "^2.35.3"
     }
