--- a/packages/pluggableWidgets/tree-node-web/package.json
+++ b/packages/pluggableWidgets/tree-node-web/package.json
@@ -37,6 +37,7 @@
         "update-changelog": "rui-update-changelog-widget",
         "e2e": "run-e2e ci",
         "e2edev": "run-e2e dev --with-preps",
+        "e2e-update-project": "pnpm -w exec turbo run build:module --filter data-widgets --force",
         "create-translation": "rui-create-translation"
     },
     "devDependencies": {
