--- a/packages/pluggableWidgets/progress-circle-web/package.json
+++ b/packages/pluggableWidgets/progress-circle-web/package.json
@@ -18,7 +18,8 @@
     "marketplace": {
         "minimumMXVersion": "9.6.0",
         "appNumber": 47783,
-        "appName": "Progress Circle"
+        "appName": "Progress Circle",
+        "reactReady": true
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
