--- a/packages/pluggableWidgets/markdown-web/package.json
+++ b/packages/pluggableWidgets/markdown-web/package.json
@@ -19,7 +19,8 @@
     "marketplace": {
         "minimumMXVersion": "9.24.0",
         "appNumber": 230248,
-        "appName": "Markdown viewer"
+        "appName": "Markdown viewer",
+        "reactReady": true
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
