--- a/packages/pluggableWidgets/rating-web/package.json
+++ b/packages/pluggableWidgets/rating-web/package.json
@@ -18,7 +18,8 @@
     "marketplace": {
         "minimumMXVersion": "9.6.0",
         "appNumber": 54611,
-        "appName": "Rating"
+        "appName": "Rating",
+        "reactReady": true
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
