--- a/packages/pluggableWidgets/slider-web/package.json
+++ b/packages/pluggableWidgets/slider-web/package.json
@@ -21,7 +21,8 @@
     "marketplace": {
         "minimumMXVersion": "9.6.0",
         "appNumber": 48786,
-        "appName": "Slider"
+        "appName": "Slider",
+        "reactReady": true
     },
     "packagePath": "com.mendix.widget.custom",
     "scripts": {
