--- a/packages/pluggableWidgets/time-series-chart-web/package.json
+++ b/packages/pluggableWidgets/time-series-chart-web/package.json
@@ -51,6 +51,6 @@
     "dependencies": {
         "@mendix/shared-charts": "workspace:*",
         "classnames": "^2.3.2",
-        "plotly.js": "^2.35.2"
+        "plotly.js-dist-min": "^3.0.0"
     }
 }
