--- a/packages/pluggableWidgets/charts-web/src/package.xml
+++ b/packages/pluggableWidgets/charts-web/src/package.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://www.mendix.com/package/1.0/">
-    <clientModule name="Charts" version="5.1.2" xmlns="http://www.mendix.com/clientModule/1.0/">
+    <clientModule name="Charts" version="6.0.0" xmlns="http://www.mendix.com/clientModule/1.0/">
         <widgetFiles>
             <widgetFile path="AreaChart/AreaChart.xml" />
             <widgetFile path="BarChart/BarChart.xml" />
             <widgetFile path="BubbleChart/BubbleChart.xml" />
             <widgetFile path="ColumnChart/ColumnChart.xml" />
+            <widgetFile path="CustomChart/CustomChart.xml" />
             <widgetFile path="HeatMap/HeatMap.xml" />
             <widgetFile path="LineChart/LineChart.xml" />
             <widgetFile path="PieChart/PieChart.xml" />
@@ -17,6 +18,7 @@
             <file path="com/mendix/widget/web/barchart" />
             <file path="com/mendix/widget/web/bubblechart" />
             <file path="com/mendix/widget/web/columnchart" />
+            <file path="com/mendix/widget/web/customchart" />
             <file path="com/mendix/widget/web/heatmap" />
             <file path="com/mendix/widget/web/linechart" />
             <file path="com/mendix/widget/web/piechart" />
