--- a/packages/customWidgets/calendar-web/package.json
+++ b/packages/customWidgets/calendar-web/package.json
@@ -67,5 +67,8 @@
         "react-big-calendar": "0.19.2",
         "react-dnd": "2.6.0",
         "react-dnd-html5-backend": "^5.0.1"
+    },
+    "patchedDependencies": {
+        "react-big-calendar@0.19.2": "patches/react-big-calendar@0.19.2.patch"
     }
 }
