--- a/packages/shared/charts/package.json
+++ b/packages/shared/charts/package.json
@@ -56,6 +56,7 @@
     "dependencies": {
         "classnames": "^2.3.2",
         "deepmerge": "^4.3.1",
+        "plotly.js": "npm:plotly.js-dist-min@3.0.0",
         "plotly.js-dist-min": "^3.0.0",
         "react-plotly.js": "^2.6.0"
     }
