--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
             "inputs": ["package.json", "**/package.xml"]
         },
         "build": {
-            "dependsOn": ["^build"],
+            "dependsOn": ["^build", "create-translation"],
             "outputs": ["dist/**", "!dist/tmp/**"]
         },
         "release": {
