--- a/packages/shared/widget-plugin-filtering/package.json
+++ b/packages/shared/widget-plugin-filtering/package.json
@@ -36,6 +36,7 @@
         "@floating-ui/react-dom": "^2.1.2",
         "@mendix/widget-plugin-external-events": "workspace:*",
         "@mendix/widget-plugin-hooks": "workspace:*",
+        "@mendix/widget-plugin-mobx-kit": "workspace:^",
         "@mendix/widget-plugin-platform": "workspace:*",
         "downshift": "^9.0.8",
         "mendix": "^10.16.49747",
