fix(table-better): add ts no check on external files

--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -63,6 +63,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.27",
+        "@jaames/iro": "^5.5.2",
         "classnames": "^2.2.6",
         "dompurify": "^3.2.4",
         "katex": "^0.16.11",
