--- a/packages/pluggableWidgets/selection-helper-web/package.json
+++ b/packages/pluggableWidgets/selection-helper-web/package.json
@@ -39,7 +39,7 @@
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
         "@mendix/eslint-config-web-widgets": "workspace:*",
-        "@mendix/pluggable-widgets-tools": "10.16.0",
+        "@mendix/pluggable-widgets-tools": "*",
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/widget-plugin-component-kit": "workspace:*",
         "@mendix/widget-plugin-grid": "workspace:*",
