--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -44,6 +44,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.27",
+        "@melloware/coloris": "^0.24.0",
         "classnames": "^2.2.6",
         "dompurify": "^3.2.4",
         "katex": "^0.16.11",
