--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -64,7 +64,7 @@
     "dependencies": {
         "@floating-ui/dom": "^1.6.13",
         "@floating-ui/react": "^0.26.27",
-        "@jaames/iro": "^5.5.2",
+        "@melloware/coloris": "^0.24.0",
         "classnames": "^2.2.6",
         "dompurify": "^3.2.4",
         "katex": "^0.16.11",
