--- a/package.json
+++ b/package.json
@@ -38,12 +38,11 @@
             ]
         },
         "overrides": {
-            "@mendix/pluggable-widgets-tools": "10.16.0",
+            "@mendix/pluggable-widgets-tools": "10.18.1",
             "react": "^18.0.0",
             "react-dom": "^18.0.0",
             "prettier": "~2.8.8",
             "@types/react": ">=18.2.36",
-            "typescript@5": "<5.2.0",
             "@types/big.js": "^6.2.2",
             "d3-color@<3.1.0": ">=3.1.0",
             "loader-utils@1": "^1.4.2",
@@ -54,10 +53,9 @@
             "json5@1.x": ">=1.0.2",
             "json5@0.x": ">=1.0.2",
             "@codemirror/view": "^6.34.2",
-            "@mendix/pluggable-widgets-tools>typescript@4": "5.0.4",
-            "@mendix/pluggable-widgets-tools>ts-node@9": "^10.9.1",
             "rollup": "^2.79.2",
-            "enzyme>cheerio": "1.0.0-rc.10"
+            "enzyme>cheerio": "1.0.0-rc.10",
+            "ts-node": "10.9.2"
         },
         "patchedDependencies": {
             "react-big-calendar@0.19.2": "patches/react-big-calendar@0.19.2.patch",
