--- a/packages/customWidgets/any-chart-web/package.json
+++ b/packages/customWidgets/any-chart-web/package.json
@@ -42,6 +42,7 @@
         "raw-loader": "^4.0.2",
         "sass-loader": "^13.2.0",
         "ts-loader": "^9.4.2",
+        "typescript": "<5.2.0",
         "webpack": "^5.96.1",
         "webpack-cli": "^5.1.4"
     },
