--- a/packages/customWidgets/calendar-web/package.json
+++ b/packages/customWidgets/calendar-web/package.json
@@ -55,6 +55,7 @@
         "style-loader": "^3.3.1",
         "to-string-loader": "^1.2.0",
         "ts-loader": "^9.4.2",
+        "typescript": "<5.2.0",
         "webpack": "^5.75.0",
         "webpack-cli": "^4.10.0",
         "webpack-merge": "^5.8.0"
