--- a/packages/pluggableWidgets/document-viewer-web/package.json
+++ b/packages/pluggableWidgets/document-viewer-web/package.json
@@ -28,20 +28,19 @@
         "start": "pluggable-widgets-tools start:server",
         "dev": "pluggable-widgets-tools start:web",
         "build": "pluggable-widgets-tools build:web",
-        "format": "pluggable-widgets-tools format",
+        "format": "prettier --write .",
         "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
-        "test": "pluggable-widgets-tools test:unit:web",
+        "test": "echo 'FIXME: Add unit tests'",
         "release": "pluggable-widgets-tools release:web"
     },
     "devDependencies": {
         "@mendix/pluggable-widgets-tools": "^10.0.0",
-        "@types/pdfjs-dist": "^2.10.378",
         "@babel/plugin-transform-private-methods": "^7.23.3",
         "@babel/plugin-transform-private-property-in-object": "^7.23.4",
         "@babel/plugin-transform-class-properties": "^7.23.3"
     },
     "dependencies": {
         "classnames": "^2.3.2",
-        "pdfjs-dist": "^4.0.379"
+        "react-pdf": "^9.2.1"
     }
 }
