--- a/packages/customWidgets/signature-web/package.json
+++ b/packages/customWidgets/signature-web/package.json
@@ -49,6 +49,7 @@
         "sass-loader": "^13.2.0",
         "to-string-loader": "^1.1.6",
         "ts-loader": "^9.4.2",
+        "ts-node": "^10.9.2",
         "typescript": "<5.2.0",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
