--- a/packages/modules/data-widgets/package.json
+++ b/packages/modules/data-widgets/package.json
@@ -68,7 +68,7 @@
         "@rollup/plugin-terser": "^0.4.4",
         "concurrently": "^6.5.1",
         "copy-and-watch": "^0.1.6",
-        "rollup": "^2.79.2",
+        "rollup": "*",
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
     }
 }
