--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     },
     "engines": {
         "node": ">=22",
-        "pnpm": ">=9.15.5"
+        "pnpm": ">=10.7.1"
     },
-    "packageManager": "pnpm@9.15.5+sha512.845196026aab1cc3f098a0474b64dfbab2afe7a1b4e91dd86895d8e4aa32a7a6d03049e2d0ad770bbe4de023a7122fb68c1a1d6e0d033c7076085f9d5d4800d4",
+    "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
     "pnpm": {
         "peerDependencyRules": {
             "allowedVersions": {
@@ -42,6 +42,7 @@
             "react": "^18.0.0",
             "react-dom": "^18.0.0",
             "prettier": "~2.8.8",
+            "@types/node": "~22.14.0",
             "@types/react": ">=18.2.36",
             "@types/big.js": "^6.2.2",
             "d3-color@<3.1.0": ">=3.1.0",
@@ -62,6 +63,9 @@
             "mobx-react-lite@4.0.7": "patches/mobx-react-lite@4.0.7.patch",
             "mime-types": "patches/mime-types.patch",
             "rc-trigger": "patches/rc-trigger.patch"
-        }
+        },
+        "onlyBuiltDependencies": [
+            "canvas"
+        ]
     }
 }
