--- a/packages/shared/prettier-config-web-widgets/package.json
+++ b/packages/shared/prettier-config-web-widgets/package.json
@@ -1,19 +1,20 @@
 {
     "name": "@mendix/prettier-config-web-widgets",
     "version": "1.0.0",
-    "private": true,
     "description": "prettier config for web widgets",
-    "main": "index.js",
-    "license": "Apache-2.0",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
+    "private": true,
     "scripts": {
-        "lint": "eslint --ext .js .",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "lint": "eslint --ext .js ."
     },
     "dependencies": {
         "@eslint/js": "^9.23.0",
-        "globals": "^16.0.0",
+        "@prettier/plugin-xml": "^3.4.1",
         "eslint": "^9.23.0",
-        "@prettier/plugin-xml": "^3.4.1"
-    }
+        "globals": "^16.0.0",
+        "prettier-plugin-packagejson": "^2.5.10"
+    },
+    "main": "index.js"
 }
