--- a/packages/pluggableWidgets/document-viewer-web/package.json
+++ b/packages/pluggableWidgets/document-viewer-web/package.json
@@ -42,6 +42,7 @@
         "@babel/plugin-transform-class-properties": "^7.23.3",
         "@babel/plugin-transform-private-methods": "^7.23.3",
         "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-        "@mendix/pluggable-widgets-tools": "^10.0.0"
+        "@mendix/pluggable-widgets-tools": "^10.0.0",
+        "@rollup/plugin-replace": "^6.0.2"
     }
 }
